#richard: upload images
