# src/route/size.go
@@ -10,7 +10,7 @@ import (
 
 //@Summary 创建尺码
 //@Produce json
-//@Param language header string false "语言" default "chinese"
+//@Param x-language header string false "语言" default "chinese"
 //@Param {} body route.RequestSize true "CreateSize"
 //@Success 200 {object} route.HttpOk
 //@Failure 400 {object} route.HttpError
@@ -30,8 +30,8 @@ func (s *service) CreateSize(ctx *https.Context) {
 		ctx.JSON(http.StatusBadRequest, s.NewHttpError(SizeCode, SizeMsg, BodyStructureErrorCode, BodyStructureErrorMsg))
 		return
 	}
-	param.Name.Multi(lang, config.Services().TranslateService(), config.Services().LogService())
-	err = config.Services().SizeService().CreateSize(&param.Name)
+	param.Group.Multi(lang, config.Services().TranslateService(), config.Services().LogService())
+	err = config.Services().SizeService().CreateSize(param.Name, &param.Group)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, s.NewHttpError(SizeCode, SizeMsg, CreateErrorCode, CreateErrorMsg))
 		return
@@ -41,20 +41,23 @@ func (s *service) CreateSize(ctx *https.Context) {
 
 //@Summary 查询尺码列表
 //@Produce json
-//@Param language header string false "语言" default "chinese"
+//@Param x-language header string false "语言" default "chinese"
 //@Param page    query int false "页码" default "0"
 //@Param perPage query int false "每页条数" default "20"
 //@Param status  query int false "状态"
+//@Param group   query string false "组" default "number"
 //@Success 200 {object} route.HttpOk
 //@Failure 400 {object} route.HttpError
 //@Failure 404 {object} route.HttpError
 //@Failure 500 {object} route.HttpError
 //@Router /v1/sizes [get]
 func (s *service) QuerySizes(ctx *https.Context) {
+	lang    := s.language(ctx)
 	page    := s.page(ctx)
 	perPage := s.perPage(ctx)
 	status  := s.status(ctx)
-	sizes, total,  err := config.Services().SizeService().QuerySizes(status, page, perPage)
+	group   := s.group(ctx)
+	sizes, total,  err := config.Services().SizeService().QuerySizes(status, page, perPage, group, lang)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, s.NewHttpError(SizeCode, SizeMsg, QueryErrorCode, QueryErrorMsg))
 		return
@@ -64,7 +67,7 @@ func (s *service) QuerySizes(ctx *https.Context) {
 
 //@Summary 查询尺码
 //@Produce json
-//@Param language header string false "语言" default "chinese"
+//@Param x-language header string false "语言" default "chinese"
 //@Success 200 {object} route.HttpOk
 //@Failure 400 {object} route.HttpError
 //@Failure 404 {object} route.HttpError
@@ -86,7 +89,7 @@ func (s *service) QuerySize(ctx *https.Context) {
 
 //@Summary 更新品牌
 //@Produce json
-//@Param language header string false "语言" default "chinese"
+//@Param x-language header string false "语言" default "chinese"
 //@Param {} body route.RequestSize true "UpdateSize"
 //@Success 200 {object} route.HttpOk
 //@Failure 400 {object} route.HttpError
@@ -110,7 +113,7 @@ func (s *service) UpdateSize(ctx *https.Context) {
 		ctx.JSON(http.StatusBadRequest, s.NewHttpError(SizeCode, SizeMsg, BodyStructureErrorCode, BodyStructureErrorMsg))
 		return
 	}
-	err = config.Services().SizeService().UpdateSize(sizeId, &param.Name, param.Status)
+	err = config.Services().SizeService().UpdateSize(sizeId, param.Name, param.Status)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, s.NewHttpError(SizeCode, SizeMsg, UpdateErrorCode, UpdateErrorMsg))
 		return
@@ -120,7 +123,7 @@ func (s *service) UpdateSize(ctx *https.Context) {
 
 //@Summary 删除尺码
 //@Produce json
-//@Param language header string false "语言" default "chinese"
+//@Param x-language header string false "语言" default "chinese"
 //@Success 200 {object} route.HttpOk
 //@Failure 400 {object} route.HttpError
 //@Failure 404 {object} route.HttpError
